# rhea

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  atlas.hcl  docker-compose.yaml  env.example  go.mod  go.sum  justfile  main.go  routes.go  routes_test.go  schema.sql  server.go  settings.go  settings_test.go  sqlc.yaml
api/bruno/environments/: docker.bru  local.bru
api/bruno/health/: health.bru
backend/: .dockerignore  .env.example  Dockerfile  atlas.hcl  database.go  go.mod  go.sum  main.go  routes.go  server.go  settings.go  sqlc.yaml
backend/api/bruno/: bruno.json
backend/api/bruno/chain/: folder.bru  (+1 more)
backend/api/swagger/: swagger_example.yaml
backend/database/: query.sql  schema.sql
backend/database/migrations/: 20250815211936_foundation.sql  20251115035629_version2.sql  atlas.sum
backend/database/sqlc/: models.go  query.sql.go
database/: models.go  query.sql
docs/: swagger.yaml
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
internal/: Dockerfile  routes.go  server.go  settings.go  settings_test.go
internal/database/: query.sql  schema.sql
internal/database/migrations/: 20250603005016_base.sql  atlas.sum
internal/database/sqlc/: models.go  query.sql.go
migrations/: 20250312052749_add_users.sql  20250312222235_add_timestamps.sql  atlas.sum
ocr/: Dockerfile  main.py  pyproject.toml
sliding-fishstick/: Health Check.bru  bruno.json
sliding-fishstick/environments/: orbstack.bru
web/: Dockerfile
(+13 files in other folders)
