[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paddleocr>=2.10.0",
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "python-lsp-black>=2.0.0",
    "python-lsp-server>=1.13.1",
    "starlite>=1.51.16",
]
